--- a/Recommendations.ipynb
+++ b/Recommendations.ipynb
@@ -1,6 +1,127 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RECOMMENDATIONS\n",
+    "\n",
+    "1) *Finding: Most common ratings are 4.0 and 3.5 stars, indicating general satisfaction.*\n",
+    "\n",
+    "The recommendations based on this finding are:\n",
+    "\n",
+    "- **Filter Out Lower Ratings**\n",
+    "\n",
+    "Although very poor ratings are rare, consider implementing a filter or threshold that minimizes the visibility of restaurants with ratings below a certain level (e.g., 3.0 stars). This will help ensure users are less likely to encounter options with significant negative feedback.\n",
+    "\n",
+    "- **Include User Preferences**\n",
+    "\n",
+    "Allow users to set preferences for certain rating ranges, so they can prioritize restaurants that align with their expectations. For example, a user might prefer options that are rated above 3.5 stars.\n",
+    "\n",
+    "- **Feature High-Rated Restaurants Prominently**\n",
+    " \n",
+    "Highlight in Recommendations: Ensure that top-rated restaurants are prominently featured in recommendations, especially for users seeking highly-rated options.\n",
+    "\n",
+    "\n",
+    "2) *Finding: Pennsylvania (PA), Florida (FL) and Tennessee (TN) boast the highest numbers of restaurants among the states*\n",
+    "\n",
+    "The recommendations based on this finding are:\n",
+    "\n",
+    "\n",
+    "- **Prioritize Major Markets for Data**\n",
+    "\n",
+    "Focus on PA, FL, and TN: Since these states have the highest number of restaurants, ensure that your dataset is comprehensive and up-to-date for these regions. Consider implementing advanced filtering options and more detailed reviews for users in these states, as there’s likely to be higher demand and a wider variety of choices.\n",
+    "\n",
+    "\n",
+    "- **Tailor Recommendations to Market Size**\n",
+    "\n",
+    "Adjust the depth of recommendations based on the density of restaurants in the region. For major markets (like PA, FL, TN), provide more granular and diverse recommendations. For regions with fewer options (like NC, CO, HI, MT), focus on quality over quantity and highlight the best available choices.\n",
+    "\n",
+    "\n",
+    "- **Offer Diverse Data Insights**\n",
+    "\n",
+    "Highlight Popular and Hidden Gems: In high-density areas, showcase a mix of popular spots and lesser-known but highly rated restaurants. In less populated states, emphasize unique and standout options to ensure users still have great dining experiences despite fewer choices.\n",
+    "\n",
+    "3) *Finding: 66.9% are Open Restaurants and 33.1% are Closed Restaurants:*\n",
+    "\n",
+    "The recommendations based on this finding are:\n",
+    "\n",
+    "\n",
+    "- **Prioritize Accuracy by Filtering Closed Restaurants**\n",
+    "\n",
+    "Implement Robust Filters: Ensure that your system rigorously filters out closed restaurants. Regularly update your dataset to reflect the current operational status of restaurants, maintaining accuracy in your recommendations.\n",
+    "\n",
+    "\n",
+    "- **Automated Alerts**\n",
+    "\n",
+    "Set up automated systems to flag and remove listings of closed restaurants as soon as possible.\n",
+    "\n",
+    "4) *Finding: McDonald's, Subway,  Taco Bell,Wendy's, Domino's Pizza, and Pizza Hut lead in frequency. This suggests a dominance of fast-food chains in the restaurant landscape.*\n",
+    "\n",
+    "The recommendations based on this finding are:\n",
+    "\n",
+    "- **Leverage Popularity for Recommendations**\n",
+    "\n",
+    "Feature Popular Chains Prominently: Highlight McDonald's, Subway, Taco Bell, Wendy's, Domino's Pizza, and Pizza Hut in your recommendations. Users often seek familiar and reliable options, so showcasing these popular chains can enhance user satisfaction.\n",
+    "\n",
+    "\n",
+    "- **Market and User Segmentation**\n",
+    "\n",
+    "Targeted Recommendations: Use segmentation to tailor recommendations based on user demographics or previous behavior. For example, users who frequently choose fast-food chains might see more recommendations for similar options.\n",
+    "\n",
+    "\n",
+    "5) *Finding: Seasonal Trends: Frequent peaks between April and July, indicating increased customer engagement during this period.*\n",
+    "\n",
+    "The recommendations based on this finding are:\n",
+    "\n",
+    "- **Incorporate Seasonality into Recommendations** \n",
+    "\n",
+    "Highlight Seasonal Popularity: During peak periods (April to July), increase the visibility of restaurants that typically see higher engagement. You might feature seasonal promotions or highlight trending restaurants during these months.\n",
+    "\n",
+    "6)  *Finding: Not all popular cuisines are included in the list of options*\n",
+    "\n",
+    "The recommendations based on this finding are:\n",
+    "\n",
+    "- **Cuisine diversification**\n",
+    "\n",
+    "Feature variations of cuisines from different regions (e.g., Southern Italian vs. Northern Italian) to give users a more nuanced dining experience.\n",
+    "\n",
+    "- **Dietary Preferences**\n",
+    "\n",
+    "Include filters for dietary preferences and restrictions (e.g., vegetarian, vegan, gluten-free) to provide more personalized recommendations.\n",
+    "\n",
+    "- **Cuisine Exploration**\n",
+    "\n",
+    "Offer recommendations based on cuisine trends and new dining experiences. For example, feature emerging cuisines or new restaurant concepts that might interest adventurous diners.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python (learn-env)",
+   "language": "python",
+   "name": "learn-env"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
