--- a/Recommendations.ipynb
+++ b/Recommendations.ipynb
@@ -152,6 +152,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## REFERENCES\n",
+    "\n",
+    "1) [YELP](https://www.yelp.com/dataset/download)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
