--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -19,13 +19,16 @@
     "\n",
     "### 1.2 Stakeholder Definition\n",
     "\n",
-    "The possible stakeholders in this project include:\n",
+    "- The main stakeholder in this project is Gourmet Guru,a start up aiming to venture into the restaurant recommendation business.\n",
+    "\n",
+    "They have contracted us,Digital Delight to handle the tech part of things and build a recommender app.\n",
+    "\n",
+    "Other indirect stakeholers who will benefit from this project are:\n",
     "\n",
     "•\tUsers: Individuals seeking personalized dining recommendations based on their unique preferences.\n",
     "\n",
     "•\tRestaurant Owners: Local businesses aiming to attract targeted customers and increase foot traffic.\n",
     "\n",
-    "•\tInvestors/Partners: Entities interested in the platform’s growth, scalability, and profitability.\n",
     "\n",
     "\n",
     "### 1.3 PROBLEM STATEMENT\n",
@@ -43,20 +46,33 @@
     "#### 1.4.2 Specific Objectives\n",
     "\n",
     "\n",
-    "-  Analyze key factors for restaurant ratings, identifying and evaluating the key attributes and factors that significantly influence restaurant ratings and customer preferences using data analysis techniques. \n",
+    "- **Optimize Recommendations for Popular Ratings**\n",
     "\n",
-    "- Develop content-based recommendation algorithms, creating and implementing advanced content-based on algorithms that can generate personalized restaurant recommendations based on     user-defined text, restaurant names, and other user preferences. \n",
+    " Focus on recommending restaurants with ratings around 4.0 and 5.0 stars, and ensure that recommendations highlight top-rated restaurants to leverage high review counts and positive experiences.\n",
+    " \n",
+    " \n",
+    "- **Filter Out Closed Restaurants**\n",
     "\n",
-    "- Implement filtering techniques to refine recommendations.\n",
+    "Implement robust filtering mechanisms to exclude closed restaurants from recommendationsand ensure that the system only recommends active, operational establishments to improve reliability and user satisfaction.\n",
     "\n",
-    "- Create an intuitive, responsive web and mobile application.\n",
+    "- **Leverage Seasonal Trends in Recommendations**\n",
+    "\n",
+    "Objective: Adjust recommendations and promotional activities to align with seasonal peaks in customer engagement,\n",
+    "\n",
+    "\n",
+    "- **Target Major Restaurant Markets**\n",
+    "\n",
+    "Objective: Prioritize data and recommendations for states with the highest numbers of restaurants\n",
+    "\n",
+    "\n",
+    "- **Create an intuitive, responsive web and mobile application.**\n",
     "\n",
     "\n",
     "### 1.5 Proposed Solution\n",
     "\n",
     "We propose developing a Restaurant Recommender System specifically for the United States.This system will help with:\n",
     "\n",
-    "•\tComprehensive Mapping: Systematically map and categorize restaurants in the United States, grouping them by cuisine type, location, and other relevant factors.\n",
+    "•\tComprehensive Categorization: Systematically  categorize restaurants in the United States, grouping them by cuisine type, location, and other relevant factors.\n",
     "\n",
     "•\tPersonalized Recommendations: Enable users to input their current location and preferred cuisine type, delivering a ranked list of nearby restaurants based on their ratings and proximity.\n",
     "\n",
@@ -67,13 +83,12 @@
     "\n",
     "Metrics of Success will include:\n",
     "\n",
+    "- RMSE : This will  measure the average magnitude of the errors between predicted values and actual values, providing an indication of how well a model performs. \n",
+    "\n",
     "•\tUser Engagement: Measured by the number of active users, frequency of use, and user retention rates.\n",
     "\n",
     "•\tRecommendation Accuracy: Evaluated through user feedback and satisfaction scores, focusing on how well the recommendations match user preferences.\n",
     "\n",
-    "•\tBusiness Impact: Analyzed by the increase in traffic and revenue for partnered restaurants.\n",
-    "\n",
-    "•\tScalability: Assessed by the system’s ability to handle an expanding user base and restaurant data across various states.\n",
     "\n",
     "\n",
     "### 1.7 Challenges\n",
@@ -4903,13 +4918,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1/20\n",
       "\u001b[1m1673/1673\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m313s\u001b[0m 184ms/step - loss: 2.1169 - root_mean_squared_error: 1.4413 - val_loss: 2.0627 - val_root_mean_squared_error: 1.4232\n",
       "Epoch 2/20\n",
       "\u001b[1m1673/1673\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m256s\u001b[0m 153ms/step - loss: 1.8676 - root_mean_squared_error: 1.3530 - val_loss: 2.0022 - val_root_mean_squared_error: 1.4022\n",
@@ -5141,9 +5150,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python keras-env",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "keras-env"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5155,7 +5164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
