Update the business understanding

--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -116,7 +116,7 @@
     "***\n",
     "## 2. DATA UNDERSTANDING\n",
     "***\n",
-    "The data used in this project was sourced from [YELP](https://www.yelp.com/dataset/download). It is a collective dataset of various businesses and user information gotten from Yelp's website. It contains 6,990,280 reviews, 150,346 businesses, 200,100 pictures across 11 metropolitan areas and 19 states. \n",
+    "The data used in this project was sourced by the stakeholders from [YELP](https://www.yelp.com/dataset/download). It is a collective dataset of various businesses and user information gotten from Yelp's website. It contains 6,990,280 reviews, 150,346 businesses, 200,100 pictures across 11 metropolitan areas and 19 states. \n",
     "The original data was filtered by concentrating only on restaurant businesses and on reviews made within the year and split into two datasets as shown \n",
     "[here](Preliminary_notebook.ipynb).\n",
     "\n",
