Add evaluation to final notebook

--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -5146,6 +5146,124 @@
     "\n",
     "> In all the models SVD has emerged to be the best RMSE score of 0.068"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EVALUATION\n",
+    "\n",
+    "\n",
+    "## FINDINGS AND EVALUATION BASED ON EDA\n",
+    "\n",
+    "\n",
+    "1) Most common ratings are 4.0 and 3.5 stars, indicating general satisfaction.Ratings below 2.5 stars are uncommon, showing few very poor experiences.\n",
+    "\n",
+    "2) Pennsylvania (PA), Florida (FL) and Tennessee (TN) boast the highest numbers of restaurants among the states, highlighting them as major markets for the restaurant industry.\n",
+    "\n",
+    "3) 66.9% Open Restaurants: A significant majority of the restaurants in our dataset are currently operational. This proportion suggests a robust industry where the majority of listed entities are active, presenting numerous options for recommendations.\n",
+    "\n",
+    "4) 33.1% Closed Restaurants: A substantial portion of the restaurants are no longer in operation. This data is crucial for ensuring accuracy in our recommendation system by filtering out closed establishments, thereby improving user experience and system reliability.\n",
+    "\n",
+    "5) McDonald's, Subway, and Taco Bell lead in frequency, indicating a high presence of these chains within the dataset. This suggests a dominance of fast-food chains in the restaurant landscape.\n",
+    "\n",
+    "6) The highest review counts appear at 4.0 and 5.0 star ratings, suggesting high customer engagement with top-rated restaurants and the opposite is true.\n",
+    "\n",
+    "7) Seasonal Trends: Frequent peaks between April and July, indicating increased customer engagement during this period.\n",
+    "\n",
+    "8) Decline in Engagement: Noticeable drops in reviews occur after July, particularly in September and December."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MODEL FINDINGS AND EVALUATION\n",
+    "\n",
+    "\n",
+    "### Overview\n",
+    "\n",
+    "This section provides a detailed comparative analysis of the models based on their performance metrics. The primary goal is to develop and deploy a robust restaurant recommender system to help customers find the best dining experience.\n",
+    "\n",
+    "\n",
+    "In this project, we will concentrate on three specific types of recommendation models:\n",
+    "\n",
+    "- Content-Based Recommender Systems\n",
+    "\n",
+    "\n",
+    "- Collaborative Filtering Systems\n",
+    "\n",
+    "\n",
+    "- Deep Neural Networks\n",
+    "\n",
+    "\n",
+    "Within each category, we will evaluate and compare different models to determine which performs the best. For validation and comparison, we will use the RMSE (root mean squared error) metric to measure how closely the predictions align with the actual values.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### COLLABORATIVE  BASED MODELS\n",
+    "\n",
+    "#### 1) BASELINE MODEL  - NORMAL PREDICTOR\n",
+    "\n",
+    "We initialized a NormalPredictor model, trained it on a training dataset, and then used it to predict ratings for a test dataset. Finally, it computed the root mean square error (RMSE) to evaluate the prediction accuracy.\n",
+    "\n",
+    "RMSE value of 0.8192 shows a poor model perfomance,so we try model number 2\n",
+    "\n",
+    "\n",
+    "#### MODEL 2 - NMF(Non-Negative Matrix Factorization) MODEL\n",
+    "\n",
+    "The NMF model had an RMSE of 0.3489 which shows improved model perfomance.\n",
+    "\n",
+    "\n",
+    "#### MODEL 3 - SVD (Single Value Decomposition)\n",
+    "\n",
+    "**Vanilla model**\n",
+    "\n",
+    "The findings for the vanilla SVD include:\n",
+    "\n",
+    "\n",
+    "- **Average Model Accuracy**: The mean RMSE of 0.1171 suggests that, on average, the model's predictions are approximately 0.1171 units away from the true values. While this provides a baseline for model accuracy, further tuning or alternative models might be explored to reduce this error.\n",
+    "\n",
+    "\n",
+    "To adress these shortcomings,we carry out  hyperparameter tuning for the SVD model using GridSearchCV. It defines a parameter grid with different values for latent factors and regularization terms. GridSearchCV is then used to evaluate these parameters across the dataset to find the best combination. The model is fitted with the dataset to determine the optimal hyperparameters that yield the best performance.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Tuned SVD model 1**\n",
+    "\n",
+    "The observations for the tuned model include:\n",
+    "\n",
+    "- *Minimal Improvement*: The best RMSE after hyperparameter tuning (0.11368471505593795) is very close to the initial mean RMSE of 0.1171, indicating that the tuning provided only a slight improvement. This suggests that the model's performance might be close to its maximum potential for this specific dataset and approach.\n",
+    "\n",
+    "**Tuned SVD model 2**\n",
+    "\n",
+    "The observations include:\n",
+    "\n",
+    "- *Improvement in RMSE*: There is a significant improvement of RMSE from 0.11368471505593795 to 0.0683\n",
+    "\n",
+    "\n",
+    "- *Higher Complexity*: The optimal number of factors (n_factors = 100) is on the higher end of the tested range, which could imply that the model benefits from increased complexity, capturing more intricate patterns in the data.\n",
+    "\n",
+    "\n",
+    "- *Low Regularization*: The best regularization term (reg_all = 0.02) is relatively low, indicating that the model performs better with less penalty on the size of the coefficients. This may suggest that the model is less prone to overfitting on this dataset.\n",
+    "\n",
+    "In conclusion,The RMSE value for the optimized SVD model which is the best performing model so far, is approximately 0.0683, indicating the model's average prediction error in terms of user ratings. Lower RMSE values are desirable as they signify better predictive accuracy.                              \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
