editing final notebook

--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -5151,11 +5151,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EVALUATION\n",
+    "***\n",
+    "## 5. EVALUATION\n",
+    "***\n",
     "\n",
-    "\n",
-    "## FINDINGS AND EVALUATION BASED ON EDA\n",
-    "\n",
+    "### FINDINGS AND EVALUATION BASED ON EDA\n",
+    "***\n",
     "\n",
     "1) Most common ratings are 4.0 and 3.5 stars, indicating general satisfaction.Ratings below 2.5 stars are uncommon, showing few very poor experiences.\n",
     "\n",
@@ -5178,10 +5179,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MODEL FINDINGS AND EVALUATION\n",
-    "\n",
-    "\n",
-    "### Overview\n",
+    "### MODEL FINDINGS AND EVALUATION\n",
+    "***\n",
     "\n",
     "This section provides a detailed comparative analysis of the models based on their performance metrics. The primary goal is to develop and deploy a robust restaurant recommender system to help customers find the best dining experience.\n",
     "\n",
@@ -5206,19 +5205,19 @@
    "source": [
     "### COLLABORATIVE  BASED MODELS\n",
     "\n",
-    "#### 1) BASELINE MODEL  - NORMAL PREDICTOR\n",
+    "##### i) BASELINE MODEL  - NORMAL PREDICTOR\n",
     "\n",
     "We initialized a NormalPredictor model, trained it on a training dataset, and then used it to predict ratings for a test dataset. Finally, it computed the root mean square error (RMSE) to evaluate the prediction accuracy.\n",
     "\n",
     "RMSE value of 0.8192 shows a poor model perfomance,so we try model number 2\n",
     "\n",
     "\n",
-    "#### MODEL 2 - NMF(Non-Negative Matrix Factorization) MODEL\n",
+    "##### ii) MODEL 2 - NMF(Non-Negative Matrix Factorization) MODEL\n",
     "\n",
     "The NMF model had an RMSE of 0.3489 which shows improved model perfomance.\n",
     "\n",
     "\n",
-    "#### MODEL 3 - SVD (Single Value Decomposition)\n",
+    "##### iii) MODEL 3 - SVD (Single Value Decomposition)\n",
     "\n",
     "**Vanilla model**\n",
     "\n",
@@ -5226,7 +5225,7 @@
     "\n",
     "\n",
     "- **Average Model Accuracy**: The mean RMSE of 0.1171 suggests that, on average, the model's predictions are approximately 0.1171 units away from the true values. While this provides a baseline for model accuracy, further tuning or alternative models might be explored to reduce this error.\n",
-    "\n",
+    "- **Cross Validation**: Upon cross validation of the vanilla method SVD model with 5 splits, we achieved an RMSE of 0.1135 which was an improvement on the SVD model.\n",
     "\n",
     "To adress these shortcomings,we carry out  hyperparameter tuning for the SVD model using GridSearchCV. It defines a parameter grid with different values for latent factors and regularization terms. GridSearchCV is then used to evaluate these parameters across the dataset to find the best combination. The model is fitted with the dataset to determine the optimal hyperparameters that yield the best performance.\n",
     "\n"
@@ -5236,25 +5235,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tuned SVD model 1**\n",
-    "\n",
-    "The observations for the tuned model include:\n",
-    "\n",
-    "- *Minimal Improvement*: The best RMSE after hyperparameter tuning (0.11368471505593795) is very close to the initial mean RMSE of 0.1171, indicating that the tuning provided only a slight improvement. This suggests that the model's performance might be close to its maximum potential for this specific dataset and approach.\n",
-    "\n",
-    "**Tuned SVD model 2**\n",
+    "**Tuned SVD model**\n",
     "\n",
     "The observations include:\n",
     "\n",
-    "- *Improvement in RMSE*: There is a significant improvement of RMSE from 0.11368471505593795 to 0.0683\n",
+    "- *Improvement in RMSE*: There is a significant improvement of RMSE from 0.11368471505593795 to 0.0709\n",
+    "- *Cross Validation RMSE8: Using 5 splits again, the RMSE of the tuned SVD model improved to 0.0658\n",
     "\n",
     "\n",
-    "- *Higher Complexity*: The optimal number of factors (n_factors = 100) is on the higher end of the tested range, which could imply that the model benefits from increased complexity, capturing more intricate patterns in the data.\n",
+    "- *Higher Complexity*: The optimal number of factors (n_factors = 20) is on the higher end of the tested range, which could imply that the model benefits from increased complexity, capturing more intricate patterns in the data.\n",
     "\n",
     "\n",
-    "- *Low Regularization*: The best regularization term (reg_all = 0.02) is relatively low, indicating that the model performs better with less penalty on the size of the coefficients. This may suggest that the model is less prone to overfitting on this dataset.\n",
+    "- *Low Regularization*: The best regularization term (reg_all = 0.01) is relatively low, indicating that the model performs better with less penalty on the size of the coefficients. This may suggest that the model is less prone to overfitting on this dataset.\n",
     "\n",
-    "In conclusion,The RMSE value for the optimized SVD model which is the best performing model so far, is approximately 0.0683, indicating the model's average prediction error in terms of user ratings. Lower RMSE values are desirable as they signify better predictive accuracy.                              \n",
+    "- *High Iterations*: The optimal number of epochs(n_epochs=40) is relatively high, which shows that the longer the model is trained, the more accurate it gets. \n",
+    "\n",
+    "In conclusion,The RMSE value for the optimized SVD model which is the best performing model so far, is approximately 0.07, indicating the model's average prediction error in terms of user ratings. Lower RMSE values are desirable as they signify better predictive accuracy.                              \n",
     "\n"
    ]
   },
@@ -5262,7 +5258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2) Deep Neural Networks (DNN)\n",
+    "#### 2) DEEP NEURAL NETWORKS (DNN)\n",
     "\n",
     "We will employ a Keras deep neural network to develop a recommendation system, aiming to enhance our RMSE scores through the use of neural network techniques.\n",
     "\n",
@@ -5367,7 +5363,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RECOMMENDATIONS\n",
+    "### RECOMMENDATIONS\n",
+    "***\n",
     "\n",
     "1) *Finding: Most common ratings are 4.0 and 3.5 stars, indicating general satisfaction.*\n",
     "\n",
@@ -5463,6 +5460,7 @@
    "metadata": {},
    "source": [
     "## FUTURE WORKS\n",
+    "***\n",
     "\n",
     "1) **Expansion of Dataset**\n",
     "\n",
@@ -5519,11 +5517,17 @@
    "metadata": {},
    "source": [
     "## REFERENCES\n",
+    "***\n",
     "\n",
     "1) [YELP](https://www.yelp.com/dataset/download)\n",
     "\n",
     "2) [Streamlit](https://docs.streamlit.io/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
