--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "# GOURMET GURU RESTAURANT RECOMMENDER SYSTEM\n",
     "***\n",
     "\n",
@@ -16,25 +14,15 @@
     "\n",
     "The U.S. dining industry is rich and varied, yet locals and tourists often find it difficult to discover restaurants that meet their specific preferences. The abundance of options, without a centralized platform for personalized recommendations, complicates the decision-making process. Our system addresses this by offering tailored dining suggestions, enhancing user experience and supporting local businesses.\n",
     "\n",
-    "\n",
     "### 1.2 Stakeholder Definition\n",
     "\n",
-    "- The main stakeholder in this project is Gourmet Guru,a start up aiming to venture into the restaurant recommendation business.\n",
+    "- The main stakeholder in this project is Gourmet Guru, a start up aiming to venture into the restaurant recommendation business.\n",
     "\n",
-    "They have contracted us,Digital Delight to handle the tech part of things and build a recommender app.\n",
-    "\n",
-    "Other indirect stakeholers who will benefit from this project are:\n",
-    "\n",
-    "•\tUsers: Individuals seeking personalized dining recommendations based on their unique preferences.\n",
-    "\n",
-    "•\tRestaurant Owners: Local businesses aiming to attract targeted customers and increase foot traffic.\n",
-    "\n",
-    "\n",
+    "They have contracted us, Digital Delight to come up with a solution.\n",
     "\n",
     "### 1.3 PROBLEM STATEMENT\n",
     "\n",
     "As the dining industry expands, consumers are overwhelmed by the numerous restaurant options, making it difficult to find establishments that match their preferences. The absence of a centralized platform for personalized recommendations complicates decision-making, especially for those in unfamiliar areas. Existing solutions are too generalized and lack real-time, location-based suggestions. As the dining scene diversifies, there's an urgent need for an intelligent recommender system to provide tailored, real-time dining suggestions, enhancing the overall experience.\n",
-    "\n",
     "\n",
     "### 1.4 OBJECTIVES\n",
     "\n",
@@ -42,71 +30,20 @@
     "\n",
     "Develop a user-friendly restaurant recommender system that provides personalized, real-time suggestions based on user location and cuisine preferences. The system will utilize various data sources to ensure accurate and relevant recommendations.\n",
     "\n",
-    "\n",
     "#### 1.4.2 Specific Objectives\n",
     "\n",
+    "- Identifying and evaluating the key attributes and factors that significantly influence restaurant ratings and customer preferences.\n",
+    "- To develop a content based recommendation system that can generate personalized restaurant recommendation based on restaurant attributes.\n",
+    "- To develop a collaborative based recommendation system that would generate recommendations based on prior restaurant ratings.\n",
+    "- Create an intuitive, responsive web and mobile application that recommends based on content or collaborative filtering.\n",
     "\n",
-    "- **Optimize Recommendations for Popular Ratings**\n",
-    "\n",
-    " Focus on recommending restaurants with ratings around 4.0 and 5.0 stars, and ensure that recommendations highlight top-rated restaurants to leverage high review counts and positive experiences.\n",
-    " \n",
-    " \n",
-    "- **Filter Out Closed Restaurants**\n",
-    "\n",
-    "Implement robust filtering mechanisms to exclude closed restaurants from recommendationsand ensure that the system only recommends active, operational establishments to improve reliability and user satisfaction.\n",
-    "\n",
-    "- **Leverage Seasonal Trends in Recommendations**\n",
-    "\n",
-    "Objective: Adjust recommendations and promotional activities to align with seasonal peaks in customer engagement,\n",
-    "\n",
-    "\n",
-    "- **Target Major Restaurant Markets**\n",
-    "\n",
-    "Objective: Prioritize data and recommendations for states with the highest numbers of restaurants\n",
-    "\n",
-    "\n",
-    "- **Create an intuitive, responsive web and mobile application.**\n",
-    "\n",
-    "\n",
-    "### 1.5 Proposed Solution\n",
-    "\n",
-    "We propose developing a Restaurant Recommender System specifically for the United States.This system will help with:\n",
-    "\n",
-    "•\tComprehensive Categorization: Systematically  categorize restaurants in the United States, grouping them by cuisine type, location, and other relevant factors.\n",
-    "\n",
-    "•\tPersonalized Recommendations: Enable users to input their current location and preferred cuisine type, delivering a ranked list of nearby restaurants based on their ratings and proximity.\n",
-    "\n",
-    "•\tEnhanced User Experience: Offer an intuitive, user-friendly interface with integrated map features to simplify navigation and help users easily explore and select dining options.\n",
-    "\n",
-    "\n",
-    "### 1.6 Metrics of success\n",
+    "### 1.5 METRICS OF SUCCESS\n",
     "\n",
     "Metrics of Success will include:\n",
     "\n",
     "- RMSE : This will  measure the average magnitude of the errors between predicted values and actual values, providing an indication of how well a model performs. \n",
     "\n",
-    "•\tUser Engagement: Measured by the number of active users, frequency of use, and user retention rates.\n",
-    "\n",
-    "•\tRecommendation Accuracy: Evaluated through user feedback and satisfaction scores, focusing on how well the recommendations match user preferences.\n",
-    "\n",
-    "\n",
-    "\n",
-    "### 1.7 Challenges\n",
-    "\n",
-    "Some of the challenges we may experience during this project include:\n",
-    "\n",
-    "- Data Collection and Quality: Ensuring the platform has access to accurate and up-to-date restaurant data is crucial, as incomplete or outdated information can lead to poor recommendations and user dissatisfaction.\n",
-    "\n",
-    "\n",
-    "- Scalability: As the user base and the number of restaurants grow, the platform must efficiently handle increased data processing and maintain real-time performance across various states, ensuring a seamless user experience.\n",
-    "\n",
-    "\n",
-    "- Competition: Differentiating the platform from established competitors like Yelp and TripAdvisor is essential. The platform needs to offer unique value propositions to attract users in a crowded market.\n",
-    "\n",
-    "\n",
-    "- Privacy and Data Security: Protecting user data and ensuring compliance with privacy regulations is a significant challenge. Building trust with users regarding data usage is vital to maintaining their engagement and loyalty.\n",
-    "\n",
-    "\n"
+    "- Recommendation Accuracy: Evaluated through user feedback and satisfaction scores, focusing on how well the recommendations match user preferences."
    ]
   },
   {
@@ -5158,7 +5095,7 @@
     "### FINDINGS AND EVALUATION BASED ON EDA\n",
     "***\n",
     "\n",
-    "1) Most common ratings are 4.0 and 3.5 stars, indicating general satisfaction.Ratings below 2.5 stars are uncommon, showing few very poor experiences.\n",
+    "1) Most common ratings are 3.5 and 4.0 stars, indicating general satisfaction.Ratings below 2.5 stars are uncommon, showing few very poor experiences.\n",
     "\n",
     "2) Pennsylvania (PA), Florida (FL) and Tennessee (TN) boast the highest numbers of restaurants among the states, highlighting them as major markets for the restaurant industry.\n",
     "\n",
@@ -5172,7 +5109,9 @@
     "\n",
     "7) Seasonal Trends: Frequent peaks between April and July, indicating increased customer engagement during this period.\n",
     "\n",
-    "8) Decline in Engagement: Noticeable drops in reviews occur after July, particularly in September and December."
+    "8) Decline in Engagement: Noticeable drops in reviews occur after July, particularly in September and December.\n",
+    "\n",
+    "9) **Covid Impact**: Evidence of declined restaurnat reviews in the year 2020 due to the COVID outbreak"
    ]
   },
   {
@@ -5188,7 +5127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COLLABORATIVE  BASED MODELS\n",
+    "### 1) COLLABORATIVE  BASED MODELS\n",
     "\n",
     "##### i) BASELINE MODEL  - NORMAL PREDICTOR\n",
     "\n",
@@ -5198,11 +5137,9 @@
     "\n",
     "The NMF model had an RMSE of 0.3489 which shows improved model perfomance.\n",
     "\n",
+    "##### iii) SVD (Single Value Decomposition) MODEL\n",
     "\n",
-    "##### iii) SVD (Single Value Decomposition)\n",
-    "\n",
-    "The vanilla SVD model had an RMSE of 0.1171, indicating good accuracy. Cross-validation further improved this to 0.1135. To enhance performance, hyperparameter tuning was performed using GridSearchCV to find the optimal parameters, improving the model further\n",
-    "\n"
+    "The vanilla SVD model had an RMSE of 0.1171, indicating good accuracy. Cross-validation further improved this to 0.1135. To enhance performance, hyperparameter tuning was performed using GridSearchCV to find the optimal parameters, improving the model further"
    ]
   },
   {
@@ -5235,7 +5172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FUTURE WORKS\n",
+    "### FUTURE WORKS\n",
     "***\n",
     "\n",
     "1) **Expansion of Dataset** Eg Include More Cuisines,Crowdsourced Data\n",
@@ -5263,9 +5200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "python keras-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "keras-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5277,7 +5214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
